--- a/3.よくある質問/1.コネポケはどういったサイトですか.md
+++ b/3.よくある質問/1.コネポケはどういったサイトですか.md
@@ -1,30 +1,36 @@
-# コネポケはどういったサイトですか
+<h3>コネポケはどういったサイトですか</h3>
+<hr>
 
 コネポケは簡単に手軽にリサイクルができるサイトです。
 
-「**世界からゴミをなくそう**」
+コネポケの名前には「世の中の色々な物がポケットを通じて繋がっていけたら」という思いを込めています。
 
-「**大切にしていた物を次の誰かへ**」
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #008dd7; font-size: 120%">
+<font color="#ffffff">
+<strong>コネポケの特徴</strong></font>
+</div>
 
+<font color="#ff0000"><strong>
+「世界からゴミをなくそう」  
+「大切にしていた物を次の誰かへ」  
 「捨てたいけど捨てられない」  
-「捨てるのことができないから誰かに使って欲しい」  
+「捨てるのことができないから誰かに使って欲しい  
 「捨て方が分からない」  
-「捨てるのにお金がかかる」
+「捨てるのにお金がかかる」</strong></font>
 
 色々な事情があって処分に困っている方は大勢いると思います。
 
-人の人生と同じように、「**物**」にも思い出や物語がたくさんあります。
+<font color="#008dd7"><h3>人の人生と同じように、「物」にも思い出や物語がたくさんあります。</h3></font>
 
-「初めての給料で買った」「人からもらった」「産まれた時からずっと使っていた」
-
-「何年間も生活の一部であった」「恋人と使った」
-
+「初めての給料で買った」「人からもらった」「産まれた時からずっと使っていた」「何年間も生活の一部であった」「恋人と使った」  
 数えきれないほどのストーリーがあると思います。
 
 でも役目を終えることも時にはあります......
 
 そんな時に捨てることなく、もし誰かが今後大切に使ってくれたら素敵なことですよね。
 
-「手放す方」も「引き継ぐ方」もどちらも幸せな気持ちになれます。
+<font color="#008dd7"><strong>「手放す方」も「引き継ぐ方」もどちらも幸せな気持ちになれます。</strong></font>
 
 そんなお手伝いができればと思い、誰でも簡単にやり取りができるコネポケを開発しました。
+
+<hr>
