--- a/3.よくある質問/11.リクエスト商品を編集したい・削除したいです.md
+++ b/3.よくある質問/11.リクエスト商品を編集したい・削除したいです.md
@@ -1,34 +1,77 @@
-# リクエスト商品を編集したい/削除したいです
+<h3>リクエスト商品を編集したい/削除したいです</h3>
+<hr>
 
-リクエストした商品の編集はできません。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">リクエストした商品の編集はできません。<br>
 リクエストを取り下げたい時は、削除することになります。
+</div>
 
-削除方法については、  
-［はじめてガイド］＞［リクエストする］＞［リクエストするには］＞【リクエスト商品を削除する】よりご確認ください。
+削除方法については、下記をご確認ください。
 
-## ■リクエストの編集
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>リクエストの編集</strong>
+</div>
 
-リクエスト商品の編集機能はご用意しておりません。  
+リクエスト商品の編集機能はご用意しておりません。<br>
 お手数ですが、削除後、初めからリクエストのやり直しをお願いいたします。
 
-## ■リクエストの削除
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>リクエストの削除</strong>
+</div>
 
 リクエスト中の商品の削除方法は下記の流れとなります。
 
-【ご注意】  
+<font color="ff0000"><strong>【ご注意】</strong></font>  
 一度削除したリクエスト内容は復元できません。  
-投稿内容を削除しても、他ユーザー様には通知などは入りません。
+投稿内容を削除しても、他ユーザー様に通知などは入りません。
 
-### ■iOS、Androidアプリをご利用の場合
+<hr>
 
-1. TOP画面左上の［三］を選択
+<h3>■iOS、Androidアプリをご利用の場合</h3>
 
-1. サイドメニューにある［履歴］をタップ
+<ol>
+<li>TOP画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューにある［履歴・取引メッセージ］をタップ</li>
+<br>
+<li>リクエスト履歴［リクエスト中］一覧より、削除したい投稿のゴミ箱アイコンをタップ</li>
+<br>
+<li>「本当にリクエストを削除してもよろしいですか？」と表示されますので［削除する］をタップすると削除できます。</li>
+</ol>
 
-1. リクエスト履歴［リクエスト中］一覧より、削除したい投稿のゴミ箱アイコンをタップ
+<hr>
 
-1. 「リクエストを取り消します。よろしいですか」と表示されますので［取り消しする］をタップすると削除できます。
+<h3>■スマートフォンブラウザをご利用の場合</h3>
 
-### ■スマートフォンブラウザをご利用の場合
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をタップ</li>
+<br>
+<li>TOP画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューにある［履歴・取引メッセージ］をタップ</li>
+<br>
+<li>リクエスト履歴［リクエスト中］一覧より、削除したい投稿のゴミ箱アイコンをタップ</li>
+<br>
+<li>「本当にリクエストを削除してもよろしいですか？」と表示されますので［削除する］をタップすると削除できます。</li>
+</ol>
 
-### ■PCブラウザをご利用の場合
+<hr>
+
+<h3>■PCブラウザをご利用の場合</h3>
+
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をクリック</li>
+<br>
+<li>サイドメニューにある［履歴・取引メッセージ］をクリック</li>
+<br>
+<li>リクエスト履歴［リクエスト中］一覧より、削除したい投稿のゴミ箱アイコンをクリック</li>
+<br>
+<li>「本当にリクエストを削除してもよろしいですか？」と表示されますので［削除する］をクリックすると削除できます。</li>
+</ol>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+削除方法については、下記からも確認することができます。<br>
+<br>
+［はじめてガイド］＞［リクエストする］＞［リクエストするには］＞【リクエスト商品を削除する】
+</div>
+
+<hr>
