--- a/3.よくある質問/14.相手に連絡先を教えても大丈夫ですか.md
+++ b/3.よくある質問/14.相手に連絡先を教えても大丈夫ですか.md
@@ -1,8 +1,19 @@
-# 相手に連絡先を教えても大丈夫ですか
+<h3>相手に連絡先を教えても大丈夫ですか</h3>
+<hr>
 
-コネポケのコメント欄でのやり取りでは個人情報を入力はしないでください。  
-コメント削除機能はございません。  
+<h3>コメント欄での個人情報のやり取りは絶対にしないでください</h3>
 
-取引のトラブルを未然に防ぐため、「住所」「待ち合わせ場所」等のやり取りは取引メッセージのご利用をお願いいたします。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;" ><font color="ff0000">
+コネポケのコメント欄でのやり取りに個人情報の入力はしないでください。<br>
+コメント削除機能はございません。<br>
+<br>
+取引のトラブルを未然に防ぐため、「住所」「待ち合わせ場所」等のやり取りは取引メッセージのご利用をお願いいたします。<br>
+<br>
+個人情報の交換につきましては、十分にご注意の上行っていただきますようお願いいたします。
+</font>
+</div>
 
-個人情報の交換につきましては、十分にご注意の上行っていただきますようお願い申しげます。  
+※名前や住所などの個人情報は絶対に入力しないでください。  
+　また、内容には責任を持って入力してください。
+
+<hr>
