--- a/3.よくある質問/3.推奨動作環境を教えてください.md
+++ b/3.よくある質問/3.推奨動作環境を教えてください.md
@@ -1,38 +1,44 @@
-# コネポケの推奨環境を教えてください
+<h3>コネポケの推奨環境を教えてください</h3>
+<hr>
 
-## アプリでのご利用
-
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>アプリでのご利用</strong>
+</div>
 
 最新バージョンのコネポケのアプリは、以下の環境にてご利用いただけます。
 
-### ■ios端末の場合
+<h3>■iOS端末の場合</h3>
 
-・iOS 9.0以降
+<ul>
+<li>OSバージョン 13.0 以降</li>
+</ul>
 
-### ■Android端末の場合
+<h3>■Android端末の場合</h3>
 
-・Android 4.1以降
+<ul>
+<li>OSバージョン 6.0 以降</li>
+</ul>
 
-以前のバージョンのアプリをご利用の場合、一部機能を正常にご利用いただけない可能性があります。  
+以前のバージョンのアプリをご利用の場合、一部機能を正常にご利用いただけない可能性があります。
 
 アプリの動作においてお困りごとが発生した場合は、ご利用端末のOSバージョンのアップデート、およびコネポケのアップデートをお試しください。
 
-***
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>Webブラウザからのご利用</strong>
+</div>
 
-## Webブラウザからのご利用
+Webからコネポケをご利用いただく場合、以下のブラウザでご利用いただけます。  
+それぞれ最新のバージョンをお使いください。
 
-Webからコネポケをご利用いただく場合、以下のブラウザでご利用いただけます。
+<ul>
+<li>Internet Explorer</li>
+<li>Microsoft Edge</li>
+<li>Firefox</li>
+<li>Google Chrome</li>
+<li>Safari<br>
+<br>
+<font color="#ff0000">※旧バージョンでは正しく動作しない可能性があります。</font><br>
+※Web版では一部ご利用いただけない機能がありますので、是非アプリをご利用いただけますと幸いです。</li>
+</ul>
 
-最新のバージョンをご利用ください。
-
-Internet Explorer11
-
-Microsoft Edge
-
-Firefox
-
-Google Chrome
-
-Safari
-
-旧バージョンでは正しく動作しない可能性があります。
+<hr>
