--- a/3.よくある質問/4.年齢制限はありますか.md
+++ b/3.よくある質問/4.年齢制限はありますか.md
@@ -1,9 +1,16 @@
-# 年齢制限はありますか
+<h3>年齢制限はありますか</h3>
+<hr>
 
 コネポケの利用は原則未成年の方のご利用は推奨はしておりません。
 
-しかしながら、コネポケのご利用について親権者の同意が得られている場合に限り、コネポケをご利用いただけます。  
+しかしながら、コネポケのご利用について<font color="ff0000">親権者の同意</font>が得られている場合に限り、コネポケをご利用いただけます。
 
-未成年の方は、コネポケの新規登録前に必ず親権者の方と「**利用規約**」「**ガイド＆ヘルプ**」のご確認をお願いいたします。  
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>未成年の方のご利用の場合</strong>
+</div>
 
-親権者の同意について、コネポケ事務局から親権者について確認の連絡をする場合がございます。  
+未成年の方は、コネポケの新規登録前に必ず親権者様と<font color="ff0000"><strong>「利用規約」「ガイド＆ヘルプ」</strong></font>のご確認をお願いいたします。
+
+<font color="ff0000">※親権者の同意について、コネポケ事務局から親権者様へ確認のご連絡をさせていただく場合がございます。</font>
+
+<hr>
