--- a/3.よくある質問/5.支払方法を教えてください.md
+++ b/3.よくある質問/5.支払方法を教えてください.md
@@ -1,19 +1,38 @@
-# 支払方法を教えてください
+<h3>支払方法を教えてください</h3>
+<hr>
 
 コネポケの一部サービスのご利用は有料となっております。
 
-プレミアム会員：月額350円（税込）
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<strong>プレミアム会員：月額350円（税込）<br>
+店舗掲載会員：月額11,000円（税込）</strong>
+</div>
 
-店舗掲載会員：月額11,000円（税込）
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>対応している支払い方法</strong>
+</div>
 
-お支払いには、クレジットカード、または携帯通信事業者が用意している支払手段（docomo・au・ソフトバンク・Y!mobile）をご利用いただけます。
+お支払いには、APP決済、GooglePlay決済、クレジットカードをご利用いただけます。  
+<font color="ff0000">※以下に記載していないお支払い方法は対応しておりません。</font>
 
-■対応している支払い方法
+<h3>■iOSアプリ・Androidアプリをご利用の場合</h3>
 
-以下枠内に記載していないお支払い方法は対応しておりません
+<ul>
+<li>iOSアプリ：APP決済</li>
+<li>Androidアプリ：GooglePlay決済</li>
+</ul>
 
-   ・クレジットカード  
-   （日本国内発行のカードがご利用できます）
+<h3>■PCブラウザ・スマートフォンブラウザをご利用の場合</h3>
 
-   ・各種スマートフォン  
-   （ドコモSpモード課金・auかんたん決済・ソフトバンクまとめて支払い・ワイモバイルまとめて支払）
+各種クレジットカード
+
+<ul>
+<li>VISA</li>
+<li>Mastercard</li>
+<li>JCB</li>
+<li>American Express</li>
+</ul>
+
+<font color="ff0000">（日本国内発行のカードがご利用できます）</font>
+
+<hr>
