--- a/3.よくある質問/12.「いいね！」ができません.md
+++ b/3.よくある質問/12.「いいね！」ができません.md
@@ -1,12 +1,24 @@
-# 「いいね！」ができません
+<h3>「いいね！」ができません</h3>
+<hr>
 
-［いいね！］は取引が完了した後に、下記の手順でおこなえます。
+<strong>［いいね！］</strong>は取引が完了した後に、下記の手順でおこなえます。
 
-   サイドメニューの［履歴］＞ 対象商品ページの［いいね！］をタップする。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>いいね！の手順</strong>
+</div>
 
-なお、１つの取引に対して、１ユーザーしか［いいね！］することができません。
+<ol>
+<li>サイドメニューの［履歴・取引メッセージ］から取引成立した商品画像をタップ</li>
+<br>
+<li>取引情報が表示されますので、ページ内の<strong>［いいね！］</strong>をタップすると<strong>［いいね！］</strong>ができます。</li>
+<br>
+<li>１つの取引に対して、１ユーザーしか<strong>［いいね！］</strong>することができません。</li>
+<br>
+<li><strong>［いいね！］</strong>の数は<font color="#ff0000">［マイページ］</font>から確認をすることができます。</li>
+</ol>
 
----
+<font color="ff0000"><strong>［いいね！］</strong>できない場合は不具合の可能性がありますので、下記よりお問い合わせください</font>
 
-できない場合は不具合の可能性がありますので、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。  
-[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
+[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
+
+<hr>
