--- a/3.よくある質問/2.コネポケの利用にお金はかかりますか.md
+++ b/3.よくある質問/2.コネポケの利用にお金はかかりますか.md
@@ -1,39 +1,46 @@
-# コネポケの利用にお金はかかりますか
+<h3>コネポケの利用にお金はかかりますか</h3>
+<hr>
 
-`［登録料］［出品］［レスポンス］`のご利用は無料です。
+<font color="#0000ff">［登録］［出品］［レスポンス］</font>のご利用は<font color="#ff0000"><strong>無料</strong></font>です。
 
-ただし、以下のサービスのご利用は`【プレミアム会員登録　月額350円】`の`【店舗会員登録　月額11,000円】`がかかります。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>スタンダード会員（無料）</strong>
+</div>
 
-## ■スタンダード会員
+<ul>
+<li>商品を出品する</li>
+<li>出品商品を引き取る（お試し1回）</li>
+<li>欲しい商品をリクエストする（お試し1回）</li>
+<li>リクエスト商品へレスポンスをする</li>
+<li>出品商品・リクエスト商品へコメントで質問する</li>
+</ul>
 
-コネポケ内の下記のサービスが無料でご利用いただけます。
+<hr>
 
-    ・商品を出品する
-    ・欲しい商品をリクエストする
-    ・リクエスト商品へレスポンスする
-    ・出品されている商品へコメントで質問する
-    ・リクエストされている商品へコメントで質問する
+<font color="#ff0000">ただし、以下のサービスのご利用は有料会員のご登録をお願いいたします。</font>
 
-## ■プレミアム会員
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>プレミアム会員（月額350円）</strong>
+</div>
 
-コネポケの全てのサービスをご利用いただける月額350円(税込）の有料サービスです。  
+プレミアム会員登録のご利用は<font color="#ff0000">月額350円</font>の<font color="#ff0000">プレミアム会員料</font>がかかります。
 
-   スタンダード会員でご利用いただけるサービスにプラスして、
+<ul>
+<li>出品商品を無制限に引き取れる</li>
+<li>リクエストに対してレスポンスがあった商品を無制限に引き取れる</li>
+</ul>
 
-    ・出品されている商品は引き取り放題！  
-    ・リクエストし放題！レスポンス受け放題！
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>店舗掲載登録（月額11,000円）</strong>
+</div>
 
-    と全てのサービスがご利用いただけます
+店舗掲載登録のご利用は<font color="#ff0000">月額11,000円</font>の<font color="#ff0000">店舗掲載料</font>がかかります。
 
-## 店舗掲載登録
+<ul>
+<li>店舗様専用ページに広告として店舗掲載を掲載</li>
+<li>出品商品を無制限に引き取れる</li>
+<li>リクエストに対してレスポンスがあった商品を無制限に引き取れる</li>
+<li>利用ユーザー様が店舗情報を見て直接仕事を依頼</li>
+</ul>
 
-店舗掲載登録のご利用は月額11,000円の店舗掲載料がかかります。
-
-※広告掲載だけではなく、出品されている商品の引取りや、リクエストなど、コネポケ全てのサービスをご利用いただけます。
-
-    ・店舗専用ページに広告として店舗掲載を掲載
-    ・出品商品を無制限に引き取る
-    ・リクエストし放題！レスポンス受け放題！
-    ・利用ユーザーが店舗情報を見て直接仕事を依頼
-    
-
+<hr>
