--- a/3.よくある質問/6.機種変更はできますか.md
+++ b/3.よくある質問/6.機種変更はできますか.md
@@ -1,37 +1,59 @@
-# 機種変更はできますか
+<h3>機種変更はできますか</h3>
+<hr>
 
-機種変更後も、引き続き同じアカウントでご利用できます。
+機種変更後も、引き続き同じアカウントでご利用できます。  
+（機種によっては再度インストールが必要になる場合があります。）
 
-機種変更後は再度インストールが必要になります。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>再インストール手順</strong>
+</div>
 
-## 再インストール手順
+<h3>■iOSの場合</h3>
 
-### ■iosの場合
+<ol>
+<li>ホーム画面でコネポケのアイコンを長押し</li>
+<br>
+<li>［Appを削除］または［バツマーク］をタップ</li>
+<br>
+<li>確認画面が表示されますので【OK】をタップしアンインストールする</li>
+<br>
+<li>アンインストール後、ホーム画面で「AppStore」をタップ</li>
+<br>
+<li>コネポケアプリを検索して再度インストールしてください。</li>
+</ol>
 
-1. コネポケのアイコンを長押し
+<h3>■Androidの場合</h3>
 
-1. アイコンが震えて左上にバツ印ガ出てくるので押す
+<ol>
+<li>ホーム画面から「GooglePlayストア」をタップ</li>
+<br>
+<li>メニューアイコン［三］＞［マイアプリ＆ゲーム］をタップ</li>
+<br>
+<li>コネポケのアイコンをタップし［アンインストール］をタップ</li>
+<br>
+<li>アンインストール後、「GooglePlayストア」の［マイアプリ＆ゲーム］＞［ライブラリ］をタップ</li>
+<br>
+<li>コネポケアプリの［インストール］または［有効にする］をタップして再インストールしてください</li>
+</ol>
 
-1. ［削除］を選択する
+<font color="#ff0000">※携帯端末により手順が異なる場合がございます。</font>
 
-1. App Storeからコネポケをインストール
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>登録している電話番号、メールアドレスが変更になった時は、必ず登録情報を変更してください</strong>
+</div>
 
-### ■Androidの場合
+<font color="#ff0000">現在登録している電話番号、メールアドレスが変更になった際は、コネポケへログイン後に必ず変更をお願いいたします。</font>
 
-1. ［ホーム画面］→［アプリケーション管理］→［コネポケ削除］
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ul>
+<li>登録電話番号の変更方法<br>
+サイドメニューの［設定］→［登録電話番号変更］</li>
+<br>
+<li>登録メールアドレスの変更方法<br>
+サイドメニューの［設定］→［会員登録情報］<br>
+<br>
+<font color="#ff0000">※誤って新規登録しないように、ご注意ください。</font></li>
+</ul>
+</div>
 
-1. Playストアからコネポケをインストール
-
-※携帯端末により手順が異なる場合がございます。
-
-   現在登録している電話番号、メールアドレスが変更になる際は、ログイン後、
-
-    ・電話番号の変更
-    ［設定］→［登録電話番号変更］
-
-    ・メールアドレスの変更
-    ［設定］→［会員登録情報］
-
-    から変更をお願いいたします。
-
-    ※誤って新規登録しないように、ご注意ください。
+<hr>
