--- a/2.はじめてガイド/4.レスする/1.リクエスト商品の探し方.md
+++ b/2.はじめてガイド/4.レスする/1.リクエスト商品の探し方.md
@@ -44,10 +44,10 @@
 <li>画面下の［検索する］をタップすると、エリアでリクエストされている商品のみが検索結果に表示されます。</li>
 </ol>
 
-<br><font color="#ff0000">※リクエスト商品を探す場合は、検索条件は［リクエスト商品］にチェックを入れてください。<br>
-<br>
-※キーワード・カテゴリ・エリアは、表示されている条件を全て含めて検索を実行します。<br>
-<br>
+<font color="#ff0000">※リクエスト商品を探す場合は、検索条件は［リクエスト商品］にチェックを入れてください。
+
+※キーワード・カテゴリ・エリアは、表示されている条件を全て含めて検索を実行します。
+
 ※適切なカテゴリーや地域を設定して検索すると、お探しの商品が見つかりやすくなります。
 </font>
 
