--- a/2.はじめてガイド/4.レスする/3.取引メッセージでやり取りをする.md
+++ b/2.はじめてガイド/4.レスする/3.取引メッセージでやり取りをする.md
@@ -6,7 +6,7 @@
 
 取引メッセージを利用して、商品の受渡し方法や場所、日時などを取引相手と決めましょう。
 
-<font color="#ff0000"> <strong>【注意】</strong> <br>
+<font color="#ff0000"> <strong>【注意】</strong>  
 最新取引メッセージから２週間経過すると取引メッセージはご利用できなくなります。
 </font>
 
@@ -14,9 +14,9 @@
 
 取引メッセージは下記の2箇所から送信できます。
 
-<h3>■取引メッセージの送信方法1</h3>
+<h3>■取引メッセージの送信方法１</h3>
 
-<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc; ">
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
 <ol>
 <li>サイドメニューにある［履歴・取引メッセージ］をタップ</li>
 <br>
@@ -26,9 +26,9 @@
 </ol>
 </div>
 
-<h3>■取引メッセージの送信方法2</h3>
+<h3>■取引メッセージの送信方法２</h3>
 
-<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc; ">
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
 <ol>
 <li>サイドメニューにある［履歴・取引メッセージ］をタップ</li>
 <br>
