--- a/2.はじめてガイド/1.出品する/1.出品するには/1.出品の流れ.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/1.出品の流れ.md
@@ -1,25 +1,37 @@
-# 出品の流れ  
+<h3>出品の流れ</h3>
 <hr>
-出品するには会員登録、ログインが必要です
 
-⑴ ホーム画面の［出品する］ボタン、またはサイドメニューにある［出品する］をタップする
+<h3>出品するには会員登録、ログインが必要です</h3>
 
-⑵ 出品画面より商品写真を登録してください。  
-カメラのアイコンを押すと、そのまま撮影することもできますし、アルバムから保存済みの写真を選択することもできます。
-<div style="padding: 5px 15px 5px 1px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>出品の手順</strong>
+</div>
+
+<ol>
+<li>ホーム画面の［出品する］ボタン、またはサイドメニューにある［出品する］をタップする</li>
+<br>
+<li>出品画面より商品写真を登録してください。<br>
+カメラのアイコンを押すと、そのまま撮影することもできますし、アルバムから保存済みの写真を選択することもできます。</li>
+</ol>
+<div style="padding: 3px 15px 3px 0px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
 <ul>
 <li>写真は4枚まで掲載できます。</li>
-<li>写真は複数登録することで、商品情報を伝えやすくなりますので、できるだけ多く掲載いただくことをお勧めします。</li>
+<br>
+<li>写真は複数登録することで商品情報を伝えやすくなりますので、できるだけ多く掲載いただくことをお勧めします。</li>
 </ul>
 </div>
-⑶ 商品名、商品の説明、商品詳細を入力してください。
+<ol start="3">
+<li>商品名、商品の説明、商品詳細を入力してください。</li>
+<br>
+<li>［利用規約に同意する］の横のチェックボックスを押して、チェックしてください。<br>
+<font color="#ff0000">※利用規約に同意いただけない場合は出品いただけません。</font></li>
+<br>
+<li>［出品する］ボタンを押して出品完了です。</li>
+</ol>
 
-⑷ ［利用規約に同意する］の横のチェックボックスを押して、チェックしてください。  
-<font color="#ff0000">※利用規約に同意いただけない場合は出品いただけません。</font>
-
-⑸ ［出品する］ボタンを押して出品完了です。
-
-※入力途中の情報を下書き保存しておくことも可能です。
+<font color="#ff0000">※入力途中の情報を下書き保存しておくことも可能です。
 
 ※出品画面の右上の［フォルダアイコン］または、最下部の［下書き一覧］ボタンを押すと保存した下書き一覧が表示されます。
+</font>
+
 <hr>
