--- a/2.はじめてガイド/1.出品する/1.出品するには/3.取引申し込みされてからの流れ.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/3.取引申し込みされてからの流れ.md
@@ -1,16 +1,24 @@
-# 取引申し込みされてからの流れ
+<h3>取引申し込みされてからの流れ</h3>
 <hr>
-⑴ 取引が成立すると、通知が届きます。
 
-⑵ 取引メッセージを利用して、商品の受渡し方法や場所、日時などを取引相手と決めましょう。
-<div style="padding: 5px 15px 5px 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<ol>
+<li>取引が成立すると、通知が届きます。</li>
+<br>
+<li>取引メッセージを利用して、商品の受渡し方法や場所、日時などを取引相手と決めましょう。</li>
+</ol>
+<div style="padding: 3px 15px 3px 0px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
 <ul>
 <li>取引メッセージの送信方法は、【取引メッセージでやり取りをする】でご確認ください。</li>
+<br>
 <li>取引メッセージは取引相手以外は閲覧できません。</li>
+<br>
 <li>配送で取引を行う場合は、トラブル防止のため、［はじめてガイド］の［出品する］＞［配送について］＞［配送時の注意］をご確認ください。</li>
 </ul>
 </div>
-⑶ 取引メッセージで決めた方法で商品を渡し、取引完了です。
+<ol start="3">
+<li>取引メッセージで決めた方法で商品を渡し、取引完了です。</li>
+<br>
+<li>良いお取り引きが出来ましたら、［いいね！］で相手ユーザ様を評価してあげましょう。</li>
+</ol>
 
-⑷ 良いお取り引きが出来ましたら、［いいね！］で相手ユーザ様を評価してあげましょう。
 <hr>
