--- a/2.はじめてガイド/1.出品する/1.出品するには/7.出品が削除されていたら.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/7.出品が削除されていたら.md
@@ -1,7 +1,24 @@
-# 出品が削除されていたら
+<h3>出品が削除されていたら</h3>
 <hr>
-コネポケでは監視スタッフが出品物のチェックをしています。
+
+コネポケでは監視スタッフが投稿内容のチェックをしています。
 
 <font color="#ff0000">コネポケ事務局の監視とユーザー様からの通報により、サイトの規約に反する投稿・カテゴリを誤っている投稿など、掲載が適切でないと判断したものにつきましては、削除させていただいております。
 </font>
+
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li>不適切なコメント</li>
+<li>規約に違反する出品</li>
+<li>規約に違反する行為</li>
+<li>法令違反の報告</li>
+<li>悪質ユーザーの報告</li>
+<li>その他
+</ul>
+</div>
+
+悪質な違法行為を行なったユーザーについては、警告およびアカウント停止の措置をとらせていただきます。
+
+なお、コネポケの監視やユーザー様からの通報により法令違反を発見した場合は、警察への通報を行い捜査に協力いたします。
+
 <hr>
