--- a/2.はじめてガイド/1.出品する/1.出品するには/4.画像や写真がアップロードできない.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/4.画像や写真がアップロードできない.md
@@ -1,33 +1,48 @@
-# 画像や写真がアップロードできない  
+<h3>画像や写真がアップロードできない</h3>
 <hr>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>アップロードができない時の手順</strong>
+</div>
+
 以下の順番でお試しください。
+
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ol>
-<li>画像が大きすぎる可能性があります。<br> 
-画像を小さくしてから再度お試しください。</li>  
+<li>画像が大きすぎる可能性があります。<br>
+画像を小さくしてから再度お試しください。</li>
 <br>
-<li>アプリを再起動のうえ、再度お試しください。</li>  
+<li>アプリを再起動のうえ、再度お試しください。</li>
 <br>
-<li>ご利用のアプリケーションが最新版でない場合、以下の手順にて最新版にアップデートしてください。
+<li>ご利用のアプリケーションが最新版でない場合、以下の手順にて最新版にアップデートしてください。</li>
 </ol>
-<div style="padding: 5px 15px 5px 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
-<font size="4">■iosの場合</font>
+</div>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>最新版にアップデート</strong>
+</div>
+
+<h3>■iOSの場合</h3>
+
 <ol>
-<li>「App Store」よりコネポケを検索</li>
+<li>「AppStore」よりコネポケを検索</li>
 <br>
-<li>「アップデート」を選択</li>
-※最新のバージョンをご利用されている場合「アップデート」は表示されません。
+<li>「アップデート」を選択<br>
+<font color="#ff0000">※最新のバージョンをご利用されている場合「アップデート」は表示されません。</font></li>
 </ol>
-<font size="4">■Androidの場合</font>
+
+<h3>■Androidの場合</h3>
+
 <ol>
 <li>「Playストア」よりコネポケを検索</li>
 <br>
 <li>「更新」を選択</li>
 </ol>
-</div>
+
 <font color="#ff0000">※機種やOSによってボタンの名称が異なる場合がございます。
 
-※端末によりアップデート可能なOSの限界があるため、ご利用端末によってはアップロードできない場合がございます。
-</font>
+※端末によりアップデート可能なOSの限界があるため、ご利用端末によってはアップロードできない場合がございます。</font>
 
 アプリ版をご利用できない場合はWebサイトからご利用ください。
+
 <hr>
