--- a/2.はじめてガイド/1.出品する/1.出品するには/5.出品商品を編集する・削除する.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/5.出品商品を編集する・削除する.md
@@ -1,52 +1,140 @@
-<n1>出品商品を編集する/削除する</h1>
+<h3>出品商品を編集する/削除する</h3>
 <hr>
+
 すでに出品している商品の内容を編集・削除したいときは、下書きに保存します。  
 （ログインした状態で操作可能です）
 
-<h2>■iOS、Androidアプリをご利用の場合</h2>
+<h3>■iOS、Androidアプリをご利用の場合</h3>
 
-<h3>【編集する】</h3>
-<div style="padding: 5px 15px 5px 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>編集する</strong>
+</div>
+
 <ol>
-<li>TOP画面左上の［三］を選択</li>
+<li>TOP画面左上の［三］をタップ</li>
 <br>
-<li>サイドメニューにある［履歴］をタップ</li>
+<li>サイドメニューにある［履歴・取引メッセージ］をタップ</li>
 <br>
 <li>出品履歴［出品中］一覧より、編集したい投稿の編集アイコンをタップ</li>
 <br>
-<li>「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をタップ。</li>
+<li>「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をタップ</li>
 <br>
-<li>下書きに保存されます。</li>
+<li>下書きに保存されます</li>
 <br>
 <li>HOME画面右下の［出品ボタン］またはサイドメニューの［出品する］をタップ</li>
 <br>
-<li>［下書き一覧］をタップ</li>
+<li>［下書き一覧へ］または、右上の［フォルダアイコン］をタップ</li>
 <br>
-<li>下書き一覧ページより、編集したい投稿をタップする</li>
+<li>下書き一覧より、編集したい投稿をタップ</li>
 <br>
 <li>出品画面で編集したい内容を編集する</li>
 <br>
 <li>［下書き保存］または［出品する］ボタンをタップ</li>
 </ol>
-</div>
 
-### 【削除する】
-
-上記の(1)～(5)の手順で下書きに保存する
-<div style="padding: 5px 15px 5px 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
-<ul>
-6.［下書き一覧］をタップ
-
-7.下書き一覧ページより、削除したい投稿を左に向かってスライドする
-
-8.ゴミ箱アイコンが表示されるのでタップする
-
-9.「本当に削除してよろしいですか？」と表示されますので［削除］をタップすると削除できます。
-</ul>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>削除する</strong>
 </div>
 
-## ■スマートフォンブラウザをご利用の場合
+<font color="ff0000">上記の（1）～（5）の手順で下書きに保存する</font>
 
-## ■PCブラウザをご利用の場合
+<ol>
+<li>［下書き一覧］をタップ</li>
+<br>
+<li>下書き一覧より、削除したい投稿を左に向かってスライドする</li>
+<br>
+<li>ゴミ箱アイコンが表示されるのでタップする</li>
+<br>
+<li>「本当に削除してよろしいですか？」と表示されますので［削除］をタップすると削除できます。</li>
+</ol>
 
-投稿内容を編集、削除しても、他ユーザー様には通知などは入りません。
+<hr>
+
+<h3>■スマートフォンブラウザをご利用の場合</h3>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>編集する</strong>
+</div>
+
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をタップ</li>
+<br>
+<li>TOP画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューにある［履歴・取引メッセージ］をタップ</li>
+<br>
+<li>出品履歴［出品中］一覧より、編集したい投稿の編集アイコンをタップ</li>
+<br>
+<li>「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をタップ</li>
+<br>
+<li>下書きに保存されます</li>
+<br>
+<li>HOME画面右下の［出品ボタン］または、マイページサイドメニューの［下書き一覧］をタップ</li>
+<br>
+<li>［下書き一覧］をタップ</li>
+<br>
+<li>下書き一覧より、編集したい投稿をタップ</li>
+<br>
+<li>出品画面で編集したい内容を編集する</li>
+<br>
+<li>［下書き保存］または［出品する］ボタンをタップ</li>
+</ol>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>削除する</strong>
+</div>
+
+<font color="ff0000">上記の（1）～（6）の手順で下書きに保存する</font><br>
+<ol>
+<li>［下書き一覧］をタップ</li>
+<br>
+<li>下書き一覧ページより、削除したい投稿のゴミ箱アイコンをタップ</li>
+<br>
+<li>「本当に削除してよろしいですか？」と表示されますので［削除］をタップすると削除できます</li>
+</ol>
+
+<hr>
+
+<h3>■PCブラウザをご利用の場合</h3>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>編集する</strong>
+</div>
+
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をクリック</li>
+<br>
+<li>サイドメニューにある［履歴・取引メッセージ］をクリック</li>
+<br>
+<li>出品履歴［出品中］一覧より、編集したい投稿の編集アイコンをクリック</li>
+<br>
+<li>「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をクリック</li>
+<br>
+<li>下書きに保存されます</li>
+<br>
+<li>マイページのサイドメニューにある［下書き一覧］をクリック</li>
+<br>
+<li>下書き一覧より、編集したい投稿をクリック</li>
+<br>
+<li>出品画面で編集したい内容を編集する</li>
+<br>
+<li>［下書き保存］または［出品する］ボタンをクリック</li>
+</ol>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>削除する</strong>
+</div>
+
+<font color="ff0000">上記の（1）～（5）の手順で下書きに保存する</font><br>
+
+<ol>
+<li>［下書き一覧］をクリック</li>
+<br>
+<li>下書き一覧ページより、削除したい投稿のゴミ箱アイコンをクリック</li>
+<br>
+<li>「本当に削除してよろしいですか？」と表示されますので［削除］をクリックすると削除できます</li>
+</ol>
+
+<font color="ff0000">※投稿内容を編集、削除しても、他ユーザー様に通知などは入りません。</font>
+
+<hr>
