--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/3.広告掲載料金について.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/3.広告掲載料金について.md
@@ -1,10 +1,11 @@
 <h3>広告掲載料金について</h3>
 <hr>
+
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>店舗掲載登録（月額11,000円）</strong>
 </div>
 
-店舗掲載登録のご利用は<font color="#ff0000">月額11,000円</font>の<font color="#ff0000">店舗掲載料</font>がかかります。<br>
+店舗掲載登録のご利用は<font color="#ff0000">月額11,000円</font>の<font color="#ff0000">店舗掲載料</font>がかかります。
 
 【利用できるサービス】
 <ul>
@@ -14,7 +15,7 @@
 <li>利用ユーザー様が店舗情報を見て直接仕事を依頼</li>
 </ul>
 
-※広告掲載だけではなく、出品されている商品の引取りやリクエストなど、コネポケ全てのサービスをご利用いただけます。<br>
+※広告掲載だけではなく、出品されている商品の引取りやリクエストなど、コネポケ全てのサービスをご利用いただけます。
 
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
 <ul>
@@ -34,7 +35,9 @@
 ご利用の決済方法によって解約方法が異なりますので、決済方法をご確認の上、下記の方法でお手続きください。
 
 <h3>■Appを通じて決済した場合</h3>
+
 iPhone／iPadの「設定」アプリから解約してください。
+
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ol>
 <li>ホーム画面から「設定」アプリを開き、一番上に表示されている「自分の名前（Apple ID）」をタップ</li>
@@ -50,7 +53,9 @@ iPhone／iPadの「設定」アプリから解約してください。
 </div>
 
 <h3>■Google Playを通じて決済した場合</h3>
+
 GooglePlayアプリから解約してください。
+
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ol>
 <li>Android スマートフォンまたはタブレットでGoogle Playを開きます</li>
@@ -68,9 +73,12 @@ GooglePlayアプリから解約してください。
 <li>「20●●/●/●に解約されます」と表示されたら解約完了となります</li>
 </ol>
 </div>
+
 <h3>■ブラウザを通じてクレジット決済した場合</h3>
-登録完了または自動更新時にお送りするメールに［自動課金停止URL］が記載されております。<br>
+
+登録完了または自動更新時にお送りするメールに［自動課金停止URL］が記載されております。  
 <font color="#ff0000">※メールは大切に保管してください。</font>
+
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ol>
 <li>［自動課金停止URL］をクリックすると自動課金番号の入力ページに遷移します</li>
@@ -79,4 +87,5 @@ GooglePlayアプリから解約してください。
 <br>
 <li>確認画面が出ますので、退会手続き（課金停止）をお願いいたします</li>
 </div>
+
 <hr>
