--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/9.不具合が発生した時.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/9.不具合が発生した時.md
@@ -1,33 +1,53 @@
-# 不具合が発生した時  
-  
+<h3>不具合が発生した時</h3>
+<hr>
+
 下記をお試しください。
 
-1. アプリの再インストール、または再起動をおこなってください。
+<ol>
+<li>アプリの再インストール、または再起動をおこなってください。<br>
+<font color="#ff0000">※アプリの再インストール、再起動をしても情報が消失することはありません。</font><br>
+<br>
+<li>ご利用のアプリケーションが最新版ではない可能性がございます。<br>
+</ol>
 
-    ※ アプリの再インストール、再起動をしても情報が消失することはありません。  
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>アップデートの手順</strong>
+</div>
 
-2. ご利用のアプリケーションが最新版ではない可能性がございます。
+ご利用端末のOSをご確認のうえ、以下の手順にてアプリのアップデートをお願いいたします。
 
-   ご利用端末のOSをご確認のうえ、以下の手順にてアプリのアップデートをお願いいたします。  
+<h3>■iOSの場合</h3>
 
-    ■iosの場合
-   1. 「App Store」よりコネポケを検索
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>App Storeよりコネポケを検索</li>
+<br>
+<li>「アップデート」を選択  <br>
+<br>
+<font color="#ff0000">※最新のバージョンをご利用されている場合「アップデート」は表示されません。</font></li>
+</ol>
+</div>
 
-   1. 「アップデート」を選択  
-※最新のバージョンをご利用されている場合「アップデート」は表示されません。
+<h3>■Androidの場合</h3>
 
-    ■Androidの場合
-   1. 「Playストア」よりコネポケを検索
-
-   2. 「更新」を選択
-
-    ※機種やOSによってボタンの名称が異なる場合がございます。
-
-    ※端末によりアップデート可能なOSの限界があるため、ご利用端末によってはアップロードできない場合がございます。
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>「Playストア」よりコネポケを検索</li>
+<br>
+<li>「更新」を選択<br>
+<br>
+<font color="#ff0000">※機種やOSによってボタンの名称が異なる場合がございます。<br>
+<br>
+※端末によりアップデート可能なOSの限界があるため、ご利用端末によってはアップロードできない場合がございます。</font></li>
+</ol>
+</div>
 
 アプリ版をご利用できない場合はWebサイトからご利用ください。
 
----
+<hr>
 
-上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。  
-[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
+上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。
+
+[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
+
+<hr>
