--- a/2.はじめてガイド/1.出品する/4.配送について/1.配送の可否について.md
+++ b/2.はじめてガイド/1.出品する/4.配送について/1.配送の可否について.md
@@ -1,16 +1,27 @@
-# 配送の可否について
+<h3>配送の可否について</h3>
+<hr>
 
-配送の可否については、出品者様がご選択いただけます。
-
+配送の可否については、出品者様がご選択いただけます。  
 任意項目ですので選択せずに出品することも可能です。
 
-**［配送可］**  
-郵送で商品を渡しすることも可能な場合
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>配送可</strong>
+</div>
 
-**［配送不可］**  
-直接引き取りのみ希望の場合
+郵送で商品を渡すことが可能な場合
 
-**［応相談］**  
-場所や配送料の負担者など、引取ユーザー様のご希望を聞いたうえで、決めることが可能な場合。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>配送不可</strong>
+</div>
+
+直接引き取りのみをご希望の場合
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>応相談</strong>
+</div>
+
+場所や配送料の負担者など、引取ユーザー様のご希望を聞いたうえで決めることが可能な場合。
 
 以上の中から選択することができます。
+
+<hr>
