--- a/2.はじめてガイド/1.出品する/4.配送について/3.配送時の注意点.md
+++ b/2.はじめてガイド/1.出品する/4.配送について/3.配送時の注意点.md
@@ -1,56 +1,75 @@
-# 配送時の注意点
+<h3>配送時の注意点</h3>
+<hr>
 
 商品の配送については配送料が発生するため、お互いに認識を一致させることお勧めします。
 
-※配送については、自己責任ですのでコネポケでサポートや対応は一切しておりません。
+<font color="#ff0000"><strong>配送については、自己責任ですのでコネポケでサポートや対応は一切しておりません。</strong></font>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>配送の注意事項</strong>
+</div>
 
 配送で取引を行う場合はトラブルを防止するため、取引メッセージで以下の内容の確認を行なってください。
 
-・配送の負担について
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>配送料の負担について</li>
+<li>配送代金について</li>
+<li>配送業者の確認</li>
+<li>梱包の仕方について</li>
+</ul>
+</div>
 
-・配送の代金について
+<font color="#ff0000"><strong>以下のような行為は絶対にお控えください。</strong></font>
 
-・配送業者の確認
-
-・梱包の仕方について
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 1px solid #ff3333; background-color: #ffe0e2; "><font color="ff0000">
+<ul>
+<li>勝手に着払いで配送する</li>
+<li>適当な住所を教える</li>
+<li>取引メッセージで決めた以外の方法で配送</li>
+</ul>
+</font>
+</div>
 
 上記以外にもトラブルが発生しやす例としては下記のようなことがあります。
 
-`【配送するときは自宅住所を書く必要がありますか】`
-
-ユーザー様同士で話し合いをして、お互いに認識を一致させてからお決めください。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<span style="font-size:18px; color:#ff0000"><strong>配送するときは自宅住所を書く必要がありますか</strong></span><br>
+ユーザー様同士で話し合いをして、お互いに認識を一致させてからお決めください。<br>
 注意点としては、万が一、宛先不明で返ってくる場合に自宅住所や氏名の記載がないとトラブルになる可能性がございます。
+</div>
 
-`【いつまでに発送すればいいですか】`
-
-相手ユーザー様から指定日時がない場合は早期の配送をおすすめしております。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<span style="font-size:18px; color:#ff0000"><strong>いつまでに発送すればいいですか</strong></span><br>
+相手ユーザー様から指定日時がない場合は早期の配送をおすすめしております。<br>
 「出品して取引が成立したけど配送を忘れていた」「レスポンスしたけど配送を忘れていた」などはトラブルの元となります。
+</div>
 
-`【商品を配送したのに引取者に届かない】`
-
-商品を配送したのに、引取者に届かないという場合は、利用された配送業者へ配送状況をご確認ください。
-
-追跡番号がある場合、配送会社の公式サイトから配送状況を確認できる場合があります。
-
-配送後に取引メッセージで追跡番号や伝票番号を伝えておくとスムーズに確認ができトラブルの防止になります。
-
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<span style="font-size:18px; color:#ff0000"><strong>商品を配送したのに引取者に届かない</strong></span><br>
+商品を配送したのに、引取者に届かないという場合は、利用された配送業者へ配送状況をご確認ください。<br>
+追跡番号がある場合、配送会社の公式サイトから配送状況を確認できる場合があります。<br>
+配送後に取引メッセージで追跡番号や伝票番号を伝えておくとスムーズに確認ができトラブルの防止になります。<br>
+<br>
 また、配送トラブルがあった場合は、よく状況をご確認のうえ、双方で話し合い問題の解決を行なってください。
+</div>
 
-`【送った商品が戻ってきた】`
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<span style="font-size:18px; color:#ff0000"><strong>送った商品が戻ってきた</strong></span><br>
+荷物が返送された場合には、以下のような理由が考えられます。<br>
+<ul>
+<li>宛先不明または転居先不明</li>
+<li>保管期間内に受け取りがなかった</li>
+<li>住所の記載に誤りがあった</li>
+</ul>
+取引メッセージで引取者様に荷物が返送されたことをお伝えいただき、住所や宛名、受け取ることが可能な時間帯等の再確認をお願いいたします。<br>
+<br>
+<font color="#ff0000">※返送されたものを、もう一度発送する場合は再度料金が発生しますので、料金の負担についても、ユーザー様同士でご確認のうえ、発送することをおすすめします。</font><br>
+<br>
+また、商品が返ってきても、引取者様と再送についての詳細や料金負担の話し合いが完了するまでは、再送をお控えすることをおすすめしております。<br>
+返送された後も「連絡がとれない」「対応してくれない」などの不適切な対応をされるユーザーがいらっしゃる場合、商品画面の<font color="#ff0000"> <strong>［通報］</strong> </font>から詳細をお知らせください。<br>
+<br>
+<font color="#ff0000">悪質なユーザーの場合はアカウント停止などを検討させていただきます。</font>
+</div>
 
-荷物が返送された場合には、以下のような理由が考えられます。
-
-・宛先不明または転居先不明  
-・保管期間内に受け取りがなかった  
-・住所の記載に誤りがあった
-
-取引メッセージで引取者様に荷物が返送されたことをお伝えいただき、住所や宛名、受け取ることが可能な時間帯等の再確認をお願いいたします。
-
-※返送されたものを、もう一度発送する場合は再度料金が発生しますので、料金の負担についても、ユーザー様同士でご確認のうえ、発送することをおすすめします。
-
-また、商品が返ってきても、引取者様と再送についての詳細や料金負担の話し合いが完了するまでは、再送をお控えすることをおすすめしております。
-
-返送された後も「連絡がとれない」「対応してくれない」などの不適切な対応をされるユーザーがいらっしゃる場合、
-商品画面の［**通報**］から詳細をお知らせください。
-
-悪質なユーザーの場合はアカウント停止などを検討させていただきます。
+<hr>
