--- a/2.はじめてガイド/1.出品する/2.出品商品を下書きに保存する、編集する.md
+++ b/2.はじめてガイド/1.出品する/2.出品商品を下書きに保存する、編集する.md
@@ -64,7 +64,7 @@
 <br>
 <li>マイページ左上の［三］をタップ</li>
 <br>
-<li>HOME画面右下の［出品ボタン］または、マイページサイドメニューの［下書き一覧］をタップ</li>
+<li>マイページサイドメニューの［下書き一覧］をタップ</li>
 <br>
 <li>下書き一覧より、編集したい投稿をタップする</li>
 <br>
@@ -82,7 +82,7 @@
 </div>
 
 <ol>
-<li>TOP画面右上の［ユーザアイコン］をクリック</li>
+<li>TOP画面右上の［ユーザーアイコン］をクリック</li>
 <br>
 <li>マイページのサイドメニューにある［履歴・取引メッセージ］をクリック</li>
 <br>
