--- a/2.はじめてガイド/4.レスする/6.レス後のよくある質問/2.取り置きをお願いされた.md
+++ b/2.はじめてガイド/4.レスする/6.レス後のよくある質問/2.取り置きをお願いされた.md
@@ -1,6 +1,8 @@
-# 取り置きをお願いされた
+<h3>取り置きをお願いされた</h3>
+<hr>
 
-取り置きをご相談されることがありますが、取り置きによるトラブルはサポートできませんので、お断りいただくことをお勧めします。
+引取希望ユーザーから、取り置きを相談されることがあります。
 
-また、取引メッセージのご利用には利用期限がございます。  
-最後のメッセージから2週間が経過した場合は、取引メッセージがご利用いただけませんので、お早めに受け渡しいただくことを完了ください。
+<font color="ff0000">取り置きや専用出品によるトラブルはサポートできませんので、お断りいただくことをお勧めします。</font>
+
+<hr>
