--- a/2.はじめてガイド/4.レスする/6.レス後のよくある質問/3.直接取引をお願いされた.md
+++ b/2.はじめてガイド/4.レスする/6.レス後のよくある質問/3.直接取引をお願いされた.md
@@ -1,3 +1,15 @@
-# 直接取引をお願いされた
+<h3>直接取引をお願いされた</h3>
+<hr>
 
-コネポケサイトを使わない直接取引は、安全性に欠け、トラブルの元ともなるため、絶対におやめください。
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+コネポケサイトを使わない直接取引は、安全性に欠けトラブルの元となりますので､コネポケでは<font color="ff0000"><strong>重大な違反行為</strong></font>としています。<br>
+<br>
+ユーザー様の安全を守り、トラブルを避けるために、絶対におやめください。<br>
+<br>
+なお､直接取引のトラブルに関するお問い合わせは､コネポケ事務局では一切受け付けません。<br>
+あらかじめご了承ください｡
+</div>
+
+<font color="ff0000">※直接取引や外部誘導が発覚した場合は、アカウントを停止させていただきます。</font>
+
+<hr>
