--- a/4.カテゴリから探す/1.出品について/5.取引相手が「いいね！」をしてくれない.md
+++ b/4.カテゴリから探す/1.出品について/5.取引相手が「いいね！」をしてくれない.md
@@ -1,9 +1,11 @@
 <h3>取引相手が「いいね！」をしてくれない</h3>
 <hr>
-<strong>「いいね！」</strong>のクリックは任意ですので、相手ユーザー様が気にしていなかったり、忘れているだけかもしれません。<br>
-<br>
-相手ユーザ様に取引メッセージから連絡してみてください。<br>
-<br>
-<font color="#ff0000"> <strong>【注意】</strong> </font><br>
+
+<strong>「いいね！」</strong>のクリックは任意ですので、相手ユーザー様が気にしていなかったり、忘れているだけかもしれません。
+
+相手ユーザ様に取引メッセージから連絡してみてください。
+
+<font color="#ff0000"><strong>【注意】</strong></font>  
 最新取引メッセージから２週間経過すると取引メッセージはご利用できなくなります。
+
 <hr>
