--- a/2.はじめてガイド/3.リクエストする/1.リクエストするには/2.レスされてからの流れ.md
+++ b/2.はじめてガイド/3.リクエストする/1.リクエストするには/2.レスされてからの流れ.md
@@ -1,17 +1,26 @@
-# レスされてからの流れ
+<h3>レスされてからの流れ</h3>
+<hr>
 
-1. レスポンスがあると、通知が届きます。
+<ol>
+<li>レスポンスがあると、通知が届きます。<br>
+<br>
+商品の引取方法や場所、日時などを<strong>［取引メッセージ］</strong>で相談しましょう。<br>
+<font color="ff0000">※取引メッセージは取引相手以外は閲覧できません。</font></li>
+<br>
+<li>配送で取引を行う場合は、トラブル防止のため、以下の内容の確認を行ない、ユーザ様同士で認識を一致させてください。</li>
+</ol>
+<div style="padding: 3px 15px 3px 0px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<ul>
+<li>配送料の負担について</li>
+<li>配送の代金について</li>
+<li>配送業者の確認</li>
+<li>梱包の仕方について</li>
+</ul>
+</div>
+<ol start="3">
+<li>取引メッセージで決めた方法で商品を受け取り、取引完了です。</li>
+<br>
+<li>良いお取り引きが出来ましたら、［いいね！］で相手ユーザ様を評価してあげましょう。</li>
+</ol>
 
-1. 商品の引取方法や場所、日時などを［取引メッセージ］で相談しましょう。  
-※取引メッセージは取引相手以外は閲覧できません。
-
-   また、配送で取引を行う場合は、トラブル防止のため、以下の内容の確認を行ない、ユーザ様同士で認識を一致させてください
-
-   ・配送料の負担について  
-・配送の代金について  
-・配送業者の確認  
-・梱包の仕方について
-
-1. 取引メッセージで決めた方法で商品を受け取り、取引完了です。
-
-1. 良いお取り引きが出来ましたら、［いいね！］で相手ユーザ様を評価してあげましょう。
+<hr>
