--- a/2.はじめてガイド/3.リクエストする/1.リクエストするには/4.本人確認について.md
+++ b/2.はじめてガイド/3.リクエストする/1.リクエストするには/4.本人確認について.md
@@ -1,13 +1,39 @@
-# 本人確認について  
-  
+<h3>本人確認について</h3>
+<hr>
+
 コネポケでは閲覧、出品以外の機能をご利用の場合、皆様に安心してお取引していただけるよう、ご利用者様のご本人様確認をさせていただいております。
 
-   ・本人確認書類による認証が必要となります。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>本人確認書類のアップロード手順</strong>
+</div>
 
-   ・確認書類を確認済みのユーザー様は［認証済みマーク］を設置いたします。
+<ol>
+<li>サイドメニューの［設定］をタップ</li>
+<br>
+<li>［会員登録情報］をタップ</li>
+<br>
+<li>［本人確認書類のアップロード］より画像をアップロードしていただき、［変更する］をタップしてください。</li>
+<br>
+<li>提出いただいた本人確認書類による認証を行います。</li>
+<br>
+<li>本人確認は、申請から<font color="#ff0000">通常３営業日</font>ほどお日にちをいただく場合がございます。</li>
+<br>
+<li>本人確認書類をご提出いただき認証済みのユーザー様は、「プロフィールページ」に表示されている「未認証」マークが<font color="#ff0000">「認証済」</font>マークに変わります。</li>
+</ol>
 
-＜本人確認方法＞  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+※提出いただいた本人確認書類が不鮮明な場合や、内容に不備がある場合は再提出をお願いすることがあります。<br>
+<br>
+※取引をスムーズに行うために、新規登録時の本人確認書類のアップロードをおすすめしております。<br>
+<br>
+※店舗掲載登録は新規登録時に必ずアップロードが必要になります。
+</div>
 
-1. サイドメニューの［設定］をタップ
-1. ［会員登録情報］をタップ  
-1. ［本人確認書類のアップロード］より画像をアップロードしていただき、［変更する］をタップしてください。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>利用できる本人確認書類について</strong>
+</div>
+
+利用できる本人確認書類については、ガイド＆ヘルプの  
+［会員登録・ログインについて］＞［本人確認書類について］＞【利用できる本人確認書類について】をご確認ください。
+
+<hr>
