--- a/2.はじめてガイド/3.リクエストする/1.リクエストするには/5.リクエスト商品を削除する.md
+++ b/2.はじめてガイド/3.リクエストする/1.リクエストするには/5.リクエスト商品を削除する.md
@@ -1,22 +1,54 @@
-# リクエスト商品を削除する
+<h3>リクエスト商品を削除する</h3>
+<hr>
 
-リクエスト中商品の削除方法は下記の流れとなります。  
-（ログインした状態で操作可能です）
+リクエスト中の商品の削除方法は下記の流れとなります。
 
-【ご注意】  
+<font color="ff0000"><strong>【ご注意】</strong></font>  
 一度削除したリクエスト内容は復元できません。  
 投稿内容を削除しても、他ユーザー様には通知などは入りません。
 
-### ■iOS、Androidアプリをご利用の場合
+<hr>
 
-1. TOP画面左上の［三］を選択
+<h3>■iOS、Androidアプリをご利用の場合</h3>
 
-1. サイドメニューにある［履歴］をタップ
+<ol>
+<li>TOP画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューにある［履歴・取引メッセージ］をタップ</li>
+<br>
+<li>リクエスト履歴［リクエスト中］一覧より、削除したい投稿のゴミ箱アイコンをタップ</li>
+<br>
+<li>「本当にリクエストを削除してもよろしいですか？」と表示されますので［削除する］をタップすると削除できます。</li>
+</ol>
 
-1. リクエスト履歴［リクエスト中］一覧より、削除したい投稿のゴミ箱アイコンをタップ
+<hr>
 
-1. 「リクエストを取り消します。よろしいですか」と表示されますので［取り消しする］をタップすると削除できます。
+<h3>■スマートフォンブラウザをご利用の場合</h3>
 
-### ■スマートフォンブラウザをご利用の場合
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をタップ</li>
+<br>
+<li>TOP画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューにある［履歴・取引メッセージ］をタップ</li>
+<br>
+<li>リクエスト履歴［リクエスト中］一覧より、削除したい投稿のゴミ箱アイコンをタップ</li>
+<br>
+<li>「本当にリクエストを削除してもよろしいですか？」と表示されますので［削除する］をタップすると削除できます。</li>
+</ol>
 
-### ■PCブラウザをご利用の場合
+<hr>
+
+<h3>■PCブラウザをご利用の場合</h3>
+
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をクリック</li>
+<br>
+<li>サイドメニューにある［履歴・取引メッセージ］をクリック</li>
+<br>
+<li>リクエスト履歴［リクエスト中］一覧より、削除したい投稿のゴミ箱アイコンをクリック</li>
+<br>
+<li>「本当にリクエストを削除してもよろしいですか？」と表示されますので［削除する］をクリックすると削除できます。</li>
+</ol>
+
+<hr>
