--- a/2.はじめてガイド/3.リクエストする/1.リクエストするには/6.画像や写真がアップロードできない.md
+++ b/2.はじめてガイド/3.リクエストする/1.リクエストするには/6.画像や写真がアップロードできない.md
@@ -1,27 +1,48 @@
-# 画像や写真がアップロードできない  
+<h3>画像や写真がアップロードできない</h3>
+<hr>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>アップロードができない時の手順</strong>
+</div>
 
 以下の順番でお試しください。
 
-1. 画像が大きすぎる可能性があります。  
-画像を小さくしてから再度お試しください。
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>画像が大きすぎる可能性があります。<br>
+画像を小さくしてから再度お試しください。</li>
+<br>
+<li>アプリを再起動のうえ、再度お試しください。</li>
+<br>
+<li>ご利用のアプリケーションが最新版でない場合、以下の手順にて最新版にアップデートしてください。</li>
+</ol>
+</div>
 
-1. アプリを再起動のうえ、再度お試しください。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>最新版にアップデート</strong>
+</div>
 
-1. ご利用のアプリケーションが最新版でない場合、以下の手順にて最新版にアップデートしてください。
+<h3>■iOSの場合</h3>
 
-    ■iosの場合
-   1. 「App Store」よりコネポケを検索
+<ol>
+<li>「AppStore」よりコネポケを検索</li>
+<br>
+<li>「アップデート」を選択<br>
+<font color="#ff0000">※最新のバージョンをご利用されている場合「アップデート」は表示されません。</font></li>
+</ol>
 
-   1. 「アップデート」を選択  
-※最新のバージョンをご利用されている場合「アップデート」は表示されません。
+<h3>■Androidの場合</h3>
 
-    ■Androidの場合
-   1. 「Playストア」よりコネポケを検索
+<ol>
+<li>「Playストア」よりコネポケを検索</li>
+<br>
+<li>「更新」を選択</li>
+</ol>
 
-   2. 「更新」を選択
+<font color="#ff0000">※機種やOSによってボタンの名称が異なる場合がございます。
 
-    ※機種やOSによってボタンの名称が異なる場合がございます。
+※端末によりアップデート可能なOSの限界があるため、ご利用端末によってはアップロードできない場合がございます。</font>
 
-    ※端末によりアップデート可能なOSの限界があるため、ご利用端末によってはアップロードできない場合がございます。
+アプリ版をご利用できない場合はWebサイトからご利用ください。
 
-アプリ版をご利用できない場合はWebサイトからご利用ください
+<hr>
