--- a/2.はじめてガイド/3.リクエストする/1.リクエストするには/1.リクエストの流れ.md
+++ b/2.はじめてガイド/3.リクエストする/1.リクエストするには/1.リクエストの流れ.md
@@ -1,13 +1,25 @@
-# リクエストの流れ
+<h3>リクエストの流れ</h3>
+<hr>
 
-リクエストするには会員登録、ログインが必要です
+<h3>リクエストするには会員登録、ログインが必要です</h3>
 
-1. ホーム画面の［リクエストする］ボタン、またはサイドメニューにある［リクエストする］をタップする
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>リクエストの手順</strong>
+</div>
 
-1. リクエストしたい商品詳細を入力。  
-※写真登録もできますので、リクエストする商品に近い画像を掲載いただくと商品情報を伝えやすくなります
+<ol>
+<li>ホーム画面の［リクエストする］ボタン、またはサイドメニューにある［リクエストする］をタップする。</li>
+<br>
+<li>リクエストしたい商品詳細を入力。<br>
+<font color="ff0000">※写真登録もできますので、リクエストする商品に近い画像を掲載いただくと商品情報を伝えやすくなります。</font></li>
+<br>
+<li>［利用規約に同意する］の横のチェックボックスをクリックして、チェックしてください。<br>
+利用規約に同意いただけない場合はリクエストいただけません。</li>
+<br>
+<li><font color="#ff0000">「リクエストする」</font>ボタンをタップしてリクエスト完了です。</li>
+</ol>
 
-1. ［利用規約に同意する］の横のチェックボックスを押して、チェックしてください。  
-利用規約に同意いただけない場合はリクエストいただけません。
+初回のみスタンダード会員でお試しリクエストができますが、2回目以降はプレミアム会員への登録が必要になります。  
+プレミアム会員はリクエストし放題！レスポンス受け放題！
 
-1. 「**リクエストする**」ボタンをタップしてリクエスト完了です。
+<hr>
