--- a/2.はじめてガイド/3.リクエストする/1.リクエストするには/3.リクエストするときに気をつけること.md
+++ b/2.はじめてガイド/3.リクエストする/1.リクエストするには/3.リクエストするときに気をつけること.md
@@ -1,33 +1,53 @@
-# リクエストするときに気をつけること
+<h3>リクエストするときに気をつけること</h3>
+<hr>
 
-欲しい商品の詳細が伝わるように、イメージ画像の掲載や商品詳細の記述にご協力をお願いいたします。
+<font color="ff0000">欲しい商品の詳細が伝わるように、イメージ画像の掲載や商品詳細の記述にご協力をお願いいたします。</font>
 
-### 【欲しい商品イメージ画像】
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>欲しい商品イメージ画像</strong>
+</div>
 
 どのような商品が欲しいのか、レスポンスをしてくれるユーザ様が把握しやすいよう、イメージ画像の掲載をお勧めいたします。
 
-### 【欲しい商品名と説明】
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>欲しい商品名と説明</strong>
+</div>
 
-譲って欲しい商品をできる限り具体的に記載しましょう。  
+譲って欲しい商品をできる限り具体的に記載しましょう。
+
 探しやすいキーワードを使用することでレスの可能性も高くなります。
 
-### 【欲しい商品の詳細】
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>欲しい商品の詳細</strong>
+</div>
 
-・カテゴリー  
-コネポケでは、カテゴリー検索ができます。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<font size="4"><strong>カテゴリー</strong></font><br>
+コネポケでは、カテゴリー検索ができます。<br>  
 適切なカテゴリーが選択されていないとカテゴリーを指定した検索で検索結果に表示されませんので、適切な商品カテゴリーの選択をお願いいたします。
+</div>
 
-・取引地域  
-コネポケでは、エリア検索もできます。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<font size="4"><strong>取引地域</strong></font><br>
+コネポケでは、エリア検索もできます。<br>
 エリアが選択されていないとエリアを指定した検索で検索結果に表示されませんので、適切なエリアの選択をお願いいたします。
+</div>
 
-・希望引取り方法  
-［配送希望］でリクエストする場合は、送料でのトラブルを防止するため、商品説明内に負担者のご希望をご記載いただくことをお勧めしております。
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 2px solid #dcdcdc;">
+<font size="4"><strong>希望引取り方法</strong></font><br>
+<font color="ff0000">［配送希望］</font>でリクエストする場合は、送料でのトラブルを防止するため、商品説明内に負担者のご希望をご記載いただくことをお勧めしております。<br>
+<br>
+また、配送で取引を行う場合は、取引メッセージで以下の内容の確認を行ない、ユーザ様同士で認識を一致させたうえで発送をご依頼ください。<br>
+<font color="#ff0000">■確認事項</font> <br>
+<ul>
+<li>配送料の負担について</li>
+<li>配送代金について</li>
+<li>配送業者の確認</li>
+<li>梱包の仕方について</li>
+</ul>
+</div>
 
-また、配送で取引を行う場合は、
-取引メッセージで以下の内容の確認を行ない、  
-ユーザ様同士で認識を一致させたうえで発送ください。
+<font color="#ff0000">■ご注意  
+リクエストされた商品の内容において、コネポケが定める基準に沿わないと判断された商品や、何らかの利用規約違反が確認された場合、非公開となる場合がございます。</font>
 
----
-■ご注意  
-リクエストされた商品の内容において、コネポケが定める基準に沿わなと判断された商品や、何らかの利用規約違反が確認された場合、非公開となる場合がございます。
+<hr>
